--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,9 +26,12 @@ jobs:
       - name: Get packages
         run: flutter pub get
 
+      - name: Decode Keystore and Properties
+        run: |
+          echo "${{ secrets.KEYSTORE }}" | base64 --decode > ./android/app/key.keystore
+          echo "${{ secrets.KEY_PROPERTIES }}" | base64 --decode > ./android/key.properties        
 
-
-      - name: Build Development
+      - name: Build Release
         run: flutter build apk
 
       - name: Upload APK
@@ -36,15 +39,6 @@ jobs:
         with:
           name: App-Releases
           path: ./build/app/outputs/flutter-apk/app-release.apk
-
-      - name: Build Web
-        run: flutter build web
-
-      - name: Deploy Web
-        uses: peaceiris/actions-gh-pages@v4
-        with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: ./build/web
 
 
 
